# server

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  QUICKSTART.md  README.md  RELEASES.md  TECHSTACK.md  uninc.yml.example
.github/workflows/: release-docker.yml  release-wasm.yml
crates/chain-engine/: Cargo.toml
crates/chain-engine/src/: chain.rs  consumer.rs  deployment_chain.rs  deployment_entry.rs  deployment_storage.rs  encryption.rs  entry.rs  erasure_handler.rs  export.rs  keystore.rs  lib.rs  locks.rs  lru_cache.rs  multi_replica_storage.rs  observed_projection.rs  payload_from.rs  reaper.rs  recovery.rs  s3_storage.rs  sharding.rs  storage.rs  verification_status.rs  verify.rs
crates/chain-engine/tests/: erasure_roundtrip.rs  reaper_roundtrip.rs
crates/chain-store/: Cargo.toml
crates/chain-store/src/: entry.rs  lib.rs  storage.rs
crates/chain-store/tests/: appendix_f_bytecount.rs
crates/chain-verifier-wasm/: Cargo.toml  build.sh
crates/chain-verifier-wasm/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: export.rs  mod.rs  status.rs  verify.rs
crates/observer/: Cargo.toml
crates/observer/src/: chain.rs  config.rs  http.rs  lib.rs  main.rs
crates/observer/src/subscribers/: minio.rs  mod.rs  mongo.rs  postgres.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: health.rs  jwt_replay.rs  lib.rs  main.rs  rate_limit.rs
crates/proxy/src/chain_api/: auth.rs  errors.rs  mod.rs
crates/proxy/src/identity/: behavioral.rs  classifier.rs  mod.rs  mtls.rs
crates/proxy/src/mongodb/: actor_marker.rs  connection.rs  fingerprint.rs  listener.rs  mod.rs  parser.rs  resolver.rs  scram.rs  wire.rs
crates/proxy/src/pool/: mod.rs
crates/proxy/src/postgres/: actor_marker.rs  connection.rs  fingerprint.rs  listener.rs  mod.rs  resolver.rs  sql_parser.rs  wire.rs
crates/proxy/src/replica/: mod.rs
crates/proxy/src/s3/: auth.rs  fingerprint.rs  handler.rs  mod.rs  resolver.rs  server.rs
crates/uninc-common/: Cargo.toml
crates/uninc-common/src/: config.rs  crypto.rs  error.rs  health.rs  lib.rs  nats_client.rs  ops_failure.rs  ops_health.rs  tombstone.rs  types.rs
crates/verification/: Cargo.toml
crates/verification/src/: assignment.rs  batch.rs  comparator.rs  engine.rs  entropy.rs  failure.rs  lib.rs  observer_client.rs  replica_client.rs  session.rs  task.rs  triggers.rs
crates/verification/src/verifiers/: mod.rs  mongodb.rs  postgres.rs  s3.rs  shared.rs
deploy/: README.md
deploy/aws/: README.md
deploy/bare-metal/: README.md
deploy/gcp/: README.md
deploy/gcp/examples/gcp-full/: main.tf  terraform.tfvars.example
deploy/gcp/examples/gcp-minimal/: main.tf  terraform.tfvars.example
deploy/gcp/modules/uninc-server/: database.tf  main.tf  network.tf  observer.tf  outputs.tf  proxy.tf  startup-db.sh  startup-observer.sh  startup-proxy.sh  variables.tf
docker/: README.md  docker-compose.observer.yml  docker-compose.self-hosted.yml  docker-compose.yml
docker/chain-engine/: Dockerfile
docker/config/: nats.conf
docker/config/postgres/: init.sql
docker/observer/: Dockerfile
docker/pgbouncer/: pgbouncer.ini  userlist.txt
docker/proxy/: Dockerfile
docs/: chain-api.md  identity-separation.md  merkle-chain.md  proxy-implementation.md  replica-verification.md  transparency-view-ui-spec.md
protocol/: README.md  SPEC-DELTA.md  draft-wang-data-access-transparency-00.md
smoke/: README.md  erasure.sh  mint_jwt.py
